2006-10-27  David Trowbridge  <trowbrds@gmail.com>

	* src/fe-gnome/preferences-page-plugins.c:
	* src/fe-gnome/about.c:
	* configure.ac:
	* data/Makefile.am:
	D data/plugin-manager.png:
	A data/icons/hicolor/22x22/apps/xchat-gnome-plugin.svg:
	A data/icons/hicolor/22x22/apps/xchat-gnome-plugin.png:
	A data/icons/hicolor/16x16/apps/xchat-gnome-plugin.svg:
	A data/icons/hicolor/16x16/apps/xchat-gnome-plugin.png:
	A data/icons/hicolor/scalable/Makefile.am:
	A data/icons/hicolor/scalable:
	A data/icons/hicolor/scalable/apps:
	A data/icons/hicolor/scalable/apps/xchat-gnome-plugin.svg:
	A data/icons/hicolor/scalable/apps/Makefile.am:
	* data/icons/hicolor/Makefile.am:
	  - Add Jones Lee's extension (plugin) icon

2006-10-27  David Trowbridge  <trowbrds@gmail.com>

	* src/fe-gnome/migration.c:
	  - Fix a potential crasher with a null value in gconf during
	    migration.

2006-10-27  David Trowbridge  <trowbrds@gmail.com>

	* configure.ac:
	  - Bump to C99 on this branch too.

2006-10-27  David Trowbridge  <trowbrds@gmail.com>

	* src/fe-gnome/pixmaps.c:
	* src/fe-gnome/pixmaps.h:
	* src/fe-gnome/userlist.c:
	* data/Makefile.am:
	D data/purple.png:
	D data/red.png:
	  - No more owner/founder icons, since very few IRC servers use this
	    anymore.

2006-10-27  David Trowbridge  <trowbrds@gmail.com>

	D po/nl.po:
	* po/LINGUAS:
	  - Remove broken translation upon request from gnome-nl.

2006-10-27  David Trowbridge  <trowbrds@gmail.com>

	* data/icons/hicolor/22x22/apps/xchat-gnome-message-nickname-said.png:
	A data/icons/hicolor/22x22/apps/xchat-gnome-status-halfop.svg:
	A data/icons/hicolor/22x22/apps/xchat-gnome-message-new.svg:
	A data/icons/hicolor/22x22/apps/xchat-gnome-status-operator.svg:
	A data/icons/hicolor/22x22/apps/xchat-gnome-message-nickname-said.svg:
	* data/icons/hicolor/16x16/apps/xchat-gnome-message-nickname-said.png:
	A data/icons/hicolor/16x16/apps/xchat-gnome-status-halfop.svg:
	A data/icons/hicolor/16x16/apps/xchat-gnome-message-new.svg: